--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div id="about">
-        <h2 class="heading">Exprerience</h2>
+        <h2 class="heading">Experience</h2>
 
         <div id="experience">
             <div class="card">
