--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeswin Paul Dany D</title>
-    <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=99268&format=png&color=ffffff" type="image/x-icon">
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=99268&format=png&color=ffffff"
+        type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -17,22 +18,25 @@
 
 <body>
     <div class="nav-bar">
-        <h1 id="name">Jeswin Paul Dany</h1>
-        <ul class="links">
-            <li class="link-item"><a href="#home">Home</a></li>
-            <li class="link-item"><a href="#about">About</a></li>
-            <li class="link-item"><a href="#projects">Projects</a></li>
-            <li class="link-item"><a href="#contact">Contact</a></li>
-        </ul>
-        <img id="menu-bar" src="assets/imgs/menu.png" alt="Menu-bar" width="24px" height="24px">
-    </div>
-    <div id="collapse-menu">
-        <ul id="collapse-menu-items">
-            <li class="collapse-menu-item"><a href="#home">Home</a></li>
-            <li class="collapse-menu-item"><a href="#about">About</a></li>
-            <li class="collapse-menu-item"><a href="#projects">Projects</a></li>
-            <li class="collapse-menu-item"><a href="#contact">Contact</a></li>
-        </ul>
+        <div class="main-nav">
+            <h1 id="name">Jeswin Paul Dany</h1>
+            <ul class="links">
+                <li class="link-item"><a href="#home">Home</a></li>
+                <li class="link-item"><a href="#about">About</a></li>
+                <li class="link-item"><a href="#projects">Projects</a></li>
+                <li class="link-item"><a href="#contact">Contact</a></li>
+            </ul>
+            <img id="menu-bar" src="assets/imgs/menu.png" alt="Menu-bar" width="24px" height="24px">
+        </div>
+
+        <div id="collapse-menu">
+            <ul id="collapse-menu-items">
+                <li class="collapse-menu-item"><a href="#home">Home</a></li>
+                <li class="collapse-menu-item"><a href="#about">About</a></li>
+                <li class="collapse-menu-item"><a href="#projects">Projects</a></li>
+                <li class="collapse-menu-item"><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
     </div>
 
     <div id="home">
@@ -141,15 +145,15 @@
         </div>
         <div id="contact-items">
             <div class="contact-item">
-                <a href= "mailto:jeswindany@gmail.com" target="blank"><img style = "padding: 2px;" align="center"
+                <a href="mailto:jeswindany@gmail.com" target="blank"><img style="padding: 2px;" align="center"
                         src="https://img.icons8.com/?size=100&id=63&format=png&color=ffffff"
                         alt="jeswin-paul-dany-171469257" height="40" width="40" /></a>
-                <a href= "mailto:jeswindany@gmail.com">&nbsp;Jeswindany@gmail.com</a>
+                <a href="mailto:jeswindany@gmail.com">&nbsp;Jeswindany@gmail.com</a>
             </div>
             <div class="contact-item">
                 <a href="https://github.com/Jeswindany" target="blank"><img align="center"
-                        src="https://img.icons8.com/?size=100&id=62856&format=png&color=ffffff"
-                        alt="jeswindany" height="40" width="40" /></a>
+                        src="https://img.icons8.com/?size=100&id=62856&format=png&color=ffffff" alt="jeswindany"
+                        height="40" width="40" /></a>
                 <a href="https://github.com/Jeswindany" target="_blank">&nbsp;Jeswindany</a>
             </div>
             <div class="contact-item">
@@ -168,7 +172,7 @@
     </div>
 
     <footer>
-        <p>Copyright © <span id = year></span> Jeswin Paul Dany </p>
+        <p>Copyright © <span id=year></span> Jeswin Paul Dany </p>
     </footer>
 
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
