--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div id="home">
-        <img id="profile-img" src="assets/imgs/profile-pic.jpg" alt="Jeswin Paul Dany" height="100%">
+        <img id="profile-img" src="assets/imgs/profile-pic.JPEG" alt="Jeswin Paul Dany" height="100%">
 
         <div id="description">
             <h2>Hi, I'm Jeswin</h2>
